@startuml

package Display {
  interface Display {
    +getDisplay() : Node
    +getTaskDisplay(Task, Node) : Node //Called recursivly to display tasks
  }

  class DeskDisplay implements Display {
    +DeskDisplay(ArrayList<TaskList>)
    -getListDisplay(TaskList) : Node
  }
  DeskDisplay "*" <-- "*" Task.TaskList : taskLists

  class ListDisplay implements Display {
    +ListDisplay(ArrayList<TaskList>)
    -getListDisplay(TaskList) : Node
  }
  ListDisplay "*" <-- "*" Task.TaskList : taskLists

  class GanttDisplay implements Display {
    +GanttDisplay()
  }

  class CreateTaskDisplay implements Display {
      +CreateTaskDisplay(TaskList)
    }
  CreateTaskDisplay "*" <-- "1" Task.TaskList : taskList

  class CreateTaskListDisplay implements Display {
        +CreateTaskListDisplay(Model)
      }
  CreateTaskListDisplay "*" <-- "1" Treulo : model

  class DetailTaskDisplay implements Display {
          +DetailTaskDisplay(Task)
        }
  DetailTaskDisplay "*" <-- "1" TreuloTask : tâche

  package DisplayFactory {
    abstract class DisplayFactory {
      +{abstract} createDisplay() : Display
      +{static} getDisplayFactory(Treulo, String) : DisplayFactory
    }

    class DeskDisplayFactory extends DisplayFactory{
      DeskDisplayFactory(Treulo)
    }
    DeskDisplayFactory "*" <-- "1" Treulo : model

    class ListDisplayFactory extends DisplayFactory{
      ListDisplayFactory(Treulo)
    }
    ListDisplayFactory "*" <-- "1" Treulo : model

    class GanttDisplayFactory extends DisplayFactory{
      GanttDisplayFactory(Treulo)
    }
    GanttDisplayFactory "*" <-- "1" Treulo : model

    class CreateTaskDisplayFactory extends DisplayFactory{
          CreateTaskDisplayFactory(Treulo)
        }
    CreateTaskDisplayFactory "*" <-- "1" Treulo : model

    class CreateTaskListDisplayFactory extends DisplayFactory{
              CreateTaskListDisplayFactory(Treulo)
            }
        CreateTaskListDisplayFactory "*" <-- "1" Treulo : model
    class DetailTaskDisplayFactory extends DisplayFactory{
              DetailTaskDisplayFactory(Treulo)
            }
    DetailTaskDisplayFactory "*" <-- "1" Treulo : model
  }
}

@enduml